Comptibility with Java 8 and added experimental FutureResult